konst/tests/misc_tests/type_eq_ui_tests/leading_double_colon_parsing_err.rs

// shadow core to test that leading `::` is parsed and used correctly
mod core {}

konst::polymorphism::type_eq_projection_fn!{
    pub(crate) fn project_res => ::core::result::Result<from T, E>
}

konst::polymorphism::type_eq_projection_fn!{
    pub(crate) fn project_opt => core::option::Option<from T>
}

fn main(){}